external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/struct_scoped_autocomplete.exp
error[E15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/struct_scoped_autocomplete.move:17:21
   │
17 │         let _tmp1 = _a.;
   │                     ^^^ Autocompletes to: 'a::m::t0'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/struct_scoped_autocomplete.move:17:24
   │
17 │         let _tmp1 = _a.;
   │                        ^
   │                        │
   │                        Unexpected ';'
   │                        Expected an identifier or a decimal number

error[E15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/struct_scoped_autocomplete.move:18:21
   │
18 │         let _tmp2 = _b.;
   │                     ^^^ Autocompletes to: 'a::m::t1'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/struct_scoped_autocomplete.move:18:24
   │
18 │         let _tmp2 = _b.;
   │                        ^
   │                        │
   │                        Unexpected ';'
   │                        Expected an identifier or a decimal number

